--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -33,6 +33,7 @@ For example, studies have shown that reappraisal of negative emotion is associat
 Similar effects have been reported for suppression (XXX) and distancing/distraction (XXX).
 
 einführen als Valenz: hier und/oder weiter unten!!!
+test von heute
 
 <!-- hier ist noch der Bezug zum Arousal drin gewesen, habe ich angepasst. Corrugator habe ich raus genommen, weil auch Levator untersucht wird (müssten sonst m.E. beide genannt werden.) Generell fehlt noch etwas die Einbettung, warum die beiden ausgewählt wurden. Soll ich da noch etwas ergänzen? bei Zaehringer wird der Levator überhaupt nicht genannt, die Metaanalyse bezieht sich nur auf den Corrugator. Wir hatten damals gesagt, dass viele der negativen Bilder primär auch recht eklig sind und daher der Levator passender sein könnte, weil er speuzifisch auf Ekel zu reagieren scheint, der Corrugator hingegen auf negative Bilder im Allgemeinen. Prinzipiell haben wir aber für beide die gleichen Hypothesen. Können aber auch warten, was die Reviewer sagen.--> 
 <!-- Denise: Ja das ist noch ein schwächerer Punkt in der Intro. Ich habe auch nur Paper gefunden, die EMG corrugator und levator für negative valence berichten, levator eher für Ekel, aber das muss hier kommen. Ein Satz für EMG reicht nicht aus. Wenn ihr weder auf Valence noch auf Arousal (so wie ich bei den Hypothesen noch vorgeschlagen hatte) hier gehen möchtet, dann könnte man das Konstrukt ja muscle activation o.ä. nennen und dies dann im Methodenteil über EMG corrugator und levator operationalisieren. Ich denke aber, dass die getrennte Analyse der beiden Muskelgruppen nivht gerechtfertig ist, da ihr ja keine getrennten Effekte annehmt, sondern der levator eventuel noch sinnvoll ist, da wir viele Ekelbilder haben. Habt ihr schonmal überlegt einen index über beide Aktivierungen zu bilden und dann darüber die Muskelaktivierung zu operationalisieren? Würde die Hypothesen und auch die Interpretation einfacher machen. Falls das nichts bringt, kann man explorativ immer noch die beiden EMGs getrennt analysieren und dies dann so berichten. -->
