--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -27,13 +27,13 @@ This postulated temporal sequence of ER strategies influences their effectivenes
 Albeit it is meta-analytically proven that all mentioned strategies reduce subjective emotional experience, distraction as a tactic of attentional deployment and (expressive) suppression as a tactic of response modulation showed only small to medium effect sizes (distraction: _d~+~_ = 0.27; suppression: _d~+~_ = 0.27).
 In contrast, distancing as tactic of cognitive change showed the highest effectiveness with an effect size of _d~+~_ = 0.45 [@Webb2012].
 
-Psychophysiology provides further important information on the effectiveness of emotion regulation strategies.
-Compared to cardiovascular, electrodermal, and pupillometric autonomic responses, facial electromoygraphy has been reported consistently across studies to be influenced by emotion regluation with even medium effect sizes [@Zaehringer2020].
-For example, studies have shown that reappraisal of negative emotion is associated with reduced activity of the Corrugtor muscle (associated with anger, sadness, and fear) and the levator muscle (associated with disgust) with _d~-~_ = 0.32 ([@Zaehringer2020]) and _d~-~_ = XXX (XXX), respectively. 
-Similar effects have been reported for suppression (XXX) and distancing/distraction (XXX).
-
-einführen als Valenz: hier und/oder weiter unten!!!
-test von heute
+Psychophysiological measures provide further important information on the effectiveness of emotion regulation strategies (for an overview, see [@Zaehringer2020]).
+Compared to cardiovascular, electrodermal, and pupillometric autonomic responses, facial electromyography has been reported consistently across studies to be influenced by emotion regulation with even medium effect sizes.
+For example, studies have shown that reappraisal of negative emotion is associated with reduced activity of the corrugator supercilii (associated with anger, sadness, and fear) with _d~-~_ = 0.32 ([@Zaehringer2020]).
+In addition, the levator labii superioris (associated with disgust) has also been associated with reduced activity during reappraisal (Burr et al., 2021; https://doi.org/10.1371/journal.pone.0247246). 
+Similar effects have been reported for suppression (Burr et al., 2021), distancing (Gärtner et al., 2021), and distraction (Schönfelder et al., 2014 DOI: 10.1093/scan/nst116).
+Importantly, results on electromyographic measures  seem to be more consistent compared to other autonomic measures, likely because they are specific to emotional valence and its changes.
+<!-- Anne: please add references-->
 
 <!-- hier ist noch der Bezug zum Arousal drin gewesen, habe ich angepasst. Corrugator habe ich raus genommen, weil auch Levator untersucht wird (müssten sonst m.E. beide genannt werden.) Generell fehlt noch etwas die Einbettung, warum die beiden ausgewählt wurden. Soll ich da noch etwas ergänzen? bei Zaehringer wird der Levator überhaupt nicht genannt, die Metaanalyse bezieht sich nur auf den Corrugator. Wir hatten damals gesagt, dass viele der negativen Bilder primär auch recht eklig sind und daher der Levator passender sein könnte, weil er speuzifisch auf Ekel zu reagieren scheint, der Corrugator hingegen auf negative Bilder im Allgemeinen. Prinzipiell haben wir aber für beide die gleichen Hypothesen. Können aber auch warten, was die Reviewer sagen.--> 
 <!-- Denise: Ja das ist noch ein schwächerer Punkt in der Intro. Ich habe auch nur Paper gefunden, die EMG corrugator und levator für negative valence berichten, levator eher für Ekel, aber das muss hier kommen. Ein Satz für EMG reicht nicht aus. Wenn ihr weder auf Valence noch auf Arousal (so wie ich bei den Hypothesen noch vorgeschlagen hatte) hier gehen möchtet, dann könnte man das Konstrukt ja muscle activation o.ä. nennen und dies dann im Methodenteil über EMG corrugator und levator operationalisieren. Ich denke aber, dass die getrennte Analyse der beiden Muskelgruppen nivht gerechtfertig ist, da ihr ja keine getrennten Effekte annehmt, sondern der levator eventuel noch sinnvoll ist, da wir viele Ekelbilder haben. Habt ihr schonmal überlegt einen index über beide Aktivierungen zu bilden und dann darüber die Muskelaktivierung zu operationalisieren? Würde die Hypothesen und auch die Interpretation einfacher machen. Falls das nichts bringt, kann man explorativ immer noch die beiden EMGs getrennt analysieren und dies dann so berichten. -->
@@ -109,12 +109,13 @@ include_graphics(here("06_Paper", "ER-ED", "figures", "Paradigm_Scheme_T2.png" )
 ```
 
 The aim of the present study is to evaluate whether this paradigm is suitable for determining SVs of ER strategies. 
-As a manipulation check, we first want to investigate whether the valence (neutral, negative) of the pictures is effecting subjective and physiological responding (EMG).
+As a manipulation check, we first want to investigate whether the valence of the pictures (neutral, negative) is effecting subjective and physiological responding (EMG).
 Second, we want to check whether the ER strategies distraction, distancing, and suppression effectively reduce subjective and physiological responding as well as, third, whether they require cognitive effort. 
 The following hypotheses are proposed:
-<!-- es gibt bisher noch keine Begründnung/Einbettung der nachfolgenden Hypothesen. Z.B.: Warum wird Corrugator und Levator untersucht? m.E. müsste oben jeweils noch ein Satz ergänzt werden, warum genau diese Variable in der aktuellen Studie untersucht werden soll.--> <!-- Denise: ja, das hab ich auch bemerkt, ist EMG auch arousal? Dann dies erstens noch einführen und argumentieren und dann auch als physiological arousal aufführen. oder steht corrugator für arousal und levator für valence? dann auch so benennen. Außerdem subjective arousal/ subjective effort auch immer konsistent benennen. Ich schlage vor hier in den hypothesen immer von subjective arousal / effort zu sprechen, dies dann im Methodenteil über die subjective ratings / effort ratings zu operationalisieren (fehlt übrigens im Methodenteil noch.-->
+<!-- es gibt bisher noch keine Begründnung/Einbettung der nachfolgenden Hypothesen. Z.B.: Warum wird Corrugator und Levator untersucht? m.E. müsste oben jeweils noch ein Satz ergänzt werden, warum genau diese Variable in der aktuellen Studie untersucht werden soll.--> 
+<!-- Denise: ja, das hab ich auch bemerkt, ist EMG auch arousal? Dann dies erstens noch einführen und argumentieren und dann auch als physiological arousal aufführen. oder steht corrugator für arousal und levator für valence? dann auch so benennen. Außerdem subjective arousal/ subjective effort auch immer konsistent benennen. Ich schlage vor hier in den hypothesen immer von subjective arousal / effort zu sprechen, dies dann im Methodenteil über die subjective ratings / effort ratings zu operationalisieren (fehlt übrigens im Methodenteil noch.-->
 <!-- Denise: im analysis plan habt ihr auch den vergleich negative vs. neutral (active viewing) beschrieben, deshalb hab ich das hier mal als Hypothese aufgenommen-->
-<!-- Anne: Ich habe jetzt Corrugator und Levator mal zusammengefasst-->
+<!-- Anne: Ich habe jetzt Corrugator und Levator mal zusammengefasst. Ich habe noch keine ausführliche Begründung fürs EMG eingefügt =  würde ich nur machen, wenn das für die anderen Maße auch geplant ist, sonst sieht es m.E. komisch aus.-->
 
 * H1a) Subjective arousal is lower after actively viewing neutral pictures compared to actively viewing negative pictures. 
 * H1b) Physiological responding (EMG *corrugator* and *levator* activity) is lower while actively viewing neutral pictures compared to actively viewing negative pictures.
